fix scrollbar

--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -10,7 +10,7 @@
 }
 html {
   overflow-x: hidden;
-  overflow-y: hidden;
+  overflow-y: auto;
   line-height: 1.5;
   font-family: "Inter-Regular", "farsi-digit";
 
